@@ -1,0 +1,41 @@
+/*
+ *
+ * ©K. D. Hedger. Tue 28 Jun 10:44:42 BST 2016 kdhedger68713@gmail.com
+ 
+ * Projects is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * at your option) any later version.
+
+ * Projects is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+ * You should have received a copy of the GNU General Public License
+ * along with Projects.  If not, see <http://www.gnu.org/licenses/>.
+ */
+
+#ifndef _INTERNET_
+#define _INTERNET_
+
+#define MYEMAIL "keithhedger@keithhedger.darktech.org"
+#define MYWEBSITE "http://khapplications.darktech.org/index.html"
+#define GLOBALWEBSITE "http://khapplications.darktech.org"
+#define ASPELLPAGE GLOBALWEBSITE "/pages/aspellgui/aspelgui.html"
+#define MANPAGEPAGE GLOBALWEBSITE "/pages/manpageeditor/help.html"
+#define CLIPVIEW GLOBALWEBSITE "/pages/clipviewer/clip.html"
+#define THEMEMANAGER GLOBALWEBSITE "/pages/apps.html#themeed"
+#define COMPMANAGER GLOBALWEBSITE "/pages/apps.html#xfcecomp"
+#define KKEDITPAGE "http://kkedit.darktech.org"
+#define KKTERMINALPAGE "http://khapplications.darktech.org/pages/kkterminal/kkterminal.html"
+
+#define COPYRITE "Copyright \xc2\xa9 2013-2016 K.D.Hedger"
+
+#ifndef _USEQT5_
+extern const char	*moreapps[];
+extern const char	*authors[];
+#else
+extern const char*	authors;
+#endif
+#endif
